# BLE-Security-System

./: .gitignore  AI rules for workflow.txt  CMakeLists.txt  README.md  fingerprint_cluster_new.m  sdkconfig
main/: CMakeLists.txt  Rotating_Scan_Session_20260225_121331.json  adv_parser.c  adv_parser.h  ble_adv_parser.py  ble_popup.py  ble_popup_working.py  ble_scan.c  ble_scan.h  build_calibration_fingerprints.py  calibration session 08042026.json  calibration session 25022026.json  calibration_fingerprints.json  cmd_server.c  cmd_server.h  http_sender.c  http_sender.h  identification_engine.py  idf_component.yml  localization_engine.py  main.c  ntp_time.c  ntp_time.h  pc_receiver.py  pc_receiver_old.py  run_ble_system.bat  scanner_config.h  scanner_control.py  session_20260223_145954.json  session_20260223_152847.json  session_20260223_233647.json  session_20260223_233723.json  session_20260223_234309.json  session_20260224_122708.json  session_20260224_192335.json  session_20260224_192623.json  session_20260224_192719.json  session_20260224_193047.json  session_20260225_161604.json  session_20260516_152310.json  (+4 more)
main/templates/: localization_dashboard.html
