idf_component_register(
    SRCS
        "main.c"
        "ble_scan.c"
        "http_sender.c"
        "adv_parser.c"
        "ntp_time.c"
        "cmd_server.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_netif
        esp_wifi
        esp_event
        esp_http_server
        esp_http_client
        lwip
        bt
        mbedtls
        mdns
        esp_driver_gpio
)
